parser_resolved.output
Nonterminals useless in grammar

    marker_else


Terminals unused in grammar

    T_LONG
    T_SHORT
    T_DOUBLE
    T_DO
    T_SWITCH
    T_CASE
    T_DEFAULT
    T_BREAK
    T_CONTINUE
    T_STRUCT
    T_SIZEOF
    CHAR_LITERAL
    STRING_LITERAL
    MOD
    AND
    OR
    NOT
    INC_OP
    DEC_OP
    SPACESHIP_OP
    LBRACKET
    RBRACKET
    COLON
    LOWER_THAN_ELSE


Rules useless in grammar

   75 marker_else: %empty


State 99 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: declaration
    5                     | function_definition

    6 function_definition: type_specifier IDENTIFIER LPAREN RPAREN compound_statement

    7 declaration: type_specifier init_declarator_list SEMICOLON

    8 init_declarator_list: init_declarator
    9                     | init_declarator_list COMMA init_declarator

   10 init_declarator: IDENTIFIER
   11                | IDENTIFIER ASSIGN expression

   12 type_specifier: T_INT
   13               | T_FLOAT
   14               | T_VOID
   15               | T_CHAR

   16 compound_statement: LBRACE statement_list RBRACE
   17                   | LBRACE RBRACE

   18 statement_list: statement
   19               | statement_list statement

   20 statement: matched_statement
   21          | unmatched_statement

   22 expression_statement: expression SEMICOLON
   23                     | SEMICOLON

   24 other_statement: compound_statement
   25                | expression_statement
   26                | jump_statement
   27                | INVALID_TOKEN
   28                | error SEMICOLON

   29 matched_statement: other_statement
   30                  | iteration_statement

   31 @1: %empty

   32 matched_statement: if_prefix matched_statement T_ELSE @1 matched_statement

   33 unmatched_statement: if_prefix statement

   34 @2: %empty

   35 unmatched_statement: if_prefix matched_statement T_ELSE @2 unmatched_statement

   36 iteration_statement: while_prefix matched_statement
   37                    | for_prefix matched_statement

   38 if_prefix: T_IF LPAREN expression RPAREN marker_if

   39 $@3: %empty

   40 while_prefix: T_WHILE marker_while LPAREN $@3 expression RPAREN marker_if

   41 $@4: %empty

   42 for_prefix: T_FOR LPAREN opt_expression SEMICOLON marker_for $@4 opt_expression SEMICOLON marker_if capture_begin opt_expression capture_end RPAREN

   43 marker_if: %empty

   44 marker_while: %empty

   45 marker_for: %empty

   46 capture_begin: marker_for

   47 capture_end: marker_for

   48 jump_statement: T_RETURN expression SEMICOLON
   49               | T_RETURN SEMICOLON

   50 expression: assignment_expression

   51 assignment_expression: relational_expression
   52                      | IDENTIFIER ASSIGN assignment_expression

   53 relational_expression: additive_expression
   54                      | relational_expression relop additive_expression

   55 relop: LT
   56      | GT
   57      | LE
   58      | GE
   59      | EQ
   60      | NE

   61 opt_expression: expression
   62               | %empty

   63 additive_expression: multiplicative_expression
   64                    | additive_expression PLUS multiplicative_expression
   65                    | additive_expression MINUS multiplicative_expression

   66 multiplicative_expression: unary_expression
   67                          | multiplicative_expression MUL unary_expression
   68                          | multiplicative_expression DIV unary_expression

   69 unary_expression: primary_expression
   70                 | MINUS unary_expression

   71 primary_expression: IDENTIFIER
   72                   | INTEGER_LITERAL
   73                   | FLOAT_LITERAL
   74                   | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256) 28
    T_INT (258) 12
    T_LONG (259)
    T_SHORT (260)
    T_FLOAT (261) 13
    T_DOUBLE (262)
    T_CHAR (263) 15
    T_VOID (264) 14
    T_IF (265) 38
    T_ELSE (266) 32 35
    T_WHILE (267) 40
    T_DO (268)
    T_FOR (269) 42
    T_SWITCH (270)
    T_CASE (271)
    T_DEFAULT (272)
    T_BREAK (273)
    T_CONTINUE (274)
    T_RETURN (275) 48 49
    T_STRUCT (276)
    T_SIZEOF (277)
    IDENTIFIER <str> (278) 6 10 11 52 71
    INTEGER_LITERAL <str> (279) 72
    FLOAT_LITERAL <str> (280) 73
    CHAR_LITERAL <str> (281)
    STRING_LITERAL <str> (282)
    PLUS (283) 64
    MINUS (284) 65 70
    MUL (285) 67
    DIV (286) 68
    MOD (287)
    ASSIGN (288) 11 52
    LT (289) 55
    GT (290) 56
    LE (291) 57
    GE (292) 58
    EQ (293) 59
    NE (294) 60
    AND (295)
    OR (296)
    NOT (297)
    INC_OP (298)
    DEC_OP (299)
    SPACESHIP_OP (300)
    LPAREN (301) 6 38 40 42 74
    RPAREN (302) 6 38 40 42 74
    LBRACE (303) 16 17
    RBRACE (304) 16 17
    LBRACKET (305)
    RBRACKET (306)
    SEMICOLON (307) 7 22 23 28 42 48 49
    COMMA (308) 9
    COLON (309)
    INVALID_TOKEN (310) 27
    LOWER_THAN_ELSE (311)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1
        on right: 0
    translation_unit (59)
        on left: 2 3
        on right: 1 3
    external_declaration (60)
        on left: 4 5
        on right: 2 3
    function_definition (61)
        on left: 6
        on right: 5
    declaration (62)
        on left: 7
        on right: 4
    init_declarator_list (63)
        on left: 8 9
        on right: 7 9
    init_declarator (64)
        on left: 10 11
        on right: 8 9
    type_specifier (65)
        on left: 12 13 14 15
        on right: 6 7
    compound_statement (66)
        on left: 16 17
        on right: 6 24
    statement_list (67)
        on left: 18 19
        on right: 16 19
    statement (68)
        on left: 20 21
        on right: 18 19 33
    expression_statement (69)
        on left: 22 23
        on right: 25
    other_statement (70)
        on left: 24 25 26 27 28
        on right: 29
    matched_statement (71)
        on left: 29 30 32
        on right: 20 32 35 36 37
    @1 (72)
        on left: 31
        on right: 32
    unmatched_statement (73)
        on left: 33 35
        on right: 21 35
    @2 (74)
        on left: 34
        on right: 35
    iteration_statement (75)
        on left: 36 37
        on right: 30
    if_prefix <str> (76)
        on left: 38
        on right: 32 33 35
    while_prefix <ctrl> (77)
        on left: 40
        on right: 36
    $@3 (78)
        on left: 39
        on right: 40
    for_prefix <ctrl> (79)
        on left: 42
        on right: 37
    $@4 (80)
        on left: 41
        on right: 42
    marker_if <str> (81)
        on left: 43
        on right: 38 40 42
    marker_while <str> (82)
        on left: 44
        on right: 40
    marker_for <str> (83)
        on left: 45
        on right: 42 46 47
    capture_begin <str> (84)
        on left: 46
        on right: 42
    capture_end <str> (85)
        on left: 47
        on right: 42
    jump_statement (86)
        on left: 48 49
        on right: 26
    expression <str> (87)
        on left: 50
        on right: 11 22 38 40 48 61 74
    assignment_expression <str> (88)
        on left: 51 52
        on right: 50 52
    relational_expression <str> (89)
        on left: 53 54
        on right: 51 54
    relop <str> (90)
        on left: 55 56 57 58 59 60
        on right: 54
    opt_expression <str> (91)
        on left: 61 62
        on right: 42
    additive_expression <str> (92)
        on left: 63 64 65
        on right: 53 54 64 65
    multiplicative_expression <str> (93)
        on left: 66 67 68
        on right: 63 64 65 67 68
    unary_expression <str> (94)
        on left: 69 70
        on right: 66 67 68 70
    primary_expression <str> (95)
        on left: 71 72 73 74
        on right: 69


State 0

    0 $accept: . program $end

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_CHAR   shift, and go to state 3
    T_VOID   shift, and go to state 4

    program               go to state 5
    translation_unit      go to state 6
    external_declaration  go to state 7
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 1

   12 type_specifier: T_INT .

    $default  reduce using rule 12 (type_specifier)


State 2

   13 type_specifier: T_FLOAT .

    $default  reduce using rule 13 (type_specifier)


State 3

   15 type_specifier: T_CHAR .

    $default  reduce using rule 15 (type_specifier)


State 4

   14 type_specifier: T_VOID .

    $default  reduce using rule 14 (type_specifier)


State 5

    0 $accept: program . $end

    $end  shift, and go to state 11


State 6

    1 program: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    T_INT    shift, and go to state 1
    T_FLOAT  shift, and go to state 2
    T_CHAR   shift, and go to state 3
    T_VOID   shift, and go to state 4

    $default  reduce using rule 1 (program)

    external_declaration  go to state 12
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 7

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 8

    5 external_declaration: function_definition .

    $default  reduce using rule 5 (external_declaration)


State 9

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 10

    6 function_definition: type_specifier . IDENTIFIER LPAREN RPAREN compound_statement
    7 declaration: type_specifier . init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 13

    init_declarator_list  go to state 14
    init_declarator       go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 13

    6 function_definition: type_specifier IDENTIFIER . LPAREN RPAREN compound_statement
   10 init_declarator: IDENTIFIER .
   11                | IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 16
    LPAREN  shift, and go to state 17

    $default  reduce using rule 10 (init_declarator)


State 14

    7 declaration: type_specifier init_declarator_list . SEMICOLON
    9 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 18
    COMMA      shift, and go to state 19


State 15

    8 init_declarator_list: init_declarator .

    $default  reduce using rule 8 (init_declarator_list)


State 16

   11 init_declarator: IDENTIFIER ASSIGN . expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    expression                 go to state 25
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 17

    6 function_definition: type_specifier IDENTIFIER LPAREN . RPAREN compound_statement

    RPAREN  shift, and go to state 32


State 18

    7 declaration: type_specifier init_declarator_list SEMICOLON .

    $default  reduce using rule 7 (declaration)


State 19

    9 init_declarator_list: init_declarator_list COMMA . init_declarator

    IDENTIFIER  shift, and go to state 33

    init_declarator  go to state 34


State 20

   52 assignment_expression: IDENTIFIER . ASSIGN assignment_expression
   71 primary_expression: IDENTIFIER .

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 71 (primary_expression)


State 21

   72 primary_expression: INTEGER_LITERAL .

    $default  reduce using rule 72 (primary_expression)


State 22

   73 primary_expression: FLOAT_LITERAL .

    $default  reduce using rule 73 (primary_expression)


State 23

   70 unary_expression: MINUS . unary_expression

    IDENTIFIER       shift, and go to state 36
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    unary_expression    go to state 37
    primary_expression  go to state 31


State 24

   74 primary_expression: LPAREN . expression RPAREN

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    expression                 go to state 38
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 25

   11 init_declarator: IDENTIFIER ASSIGN expression .

    $default  reduce using rule 11 (init_declarator)


State 26

   50 expression: assignment_expression .

    $default  reduce using rule 50 (expression)


State 27

   51 assignment_expression: relational_expression .
   54 relational_expression: relational_expression . relop additive_expression

    LT  shift, and go to state 39
    GT  shift, and go to state 40
    LE  shift, and go to state 41
    GE  shift, and go to state 42
    EQ  shift, and go to state 43
    NE  shift, and go to state 44

    $default  reduce using rule 51 (assignment_expression)

    relop  go to state 45


State 28

   53 relational_expression: additive_expression .
   64 additive_expression: additive_expression . PLUS multiplicative_expression
   65                    | additive_expression . MINUS multiplicative_expression

    PLUS   shift, and go to state 46
    MINUS  shift, and go to state 47

    $default  reduce using rule 53 (relational_expression)


State 29

   63 additive_expression: multiplicative_expression .
   67 multiplicative_expression: multiplicative_expression . MUL unary_expression
   68                          | multiplicative_expression . DIV unary_expression

    MUL  shift, and go to state 48
    DIV  shift, and go to state 49

    $default  reduce using rule 63 (additive_expression)


State 30

   66 multiplicative_expression: unary_expression .

    $default  reduce using rule 66 (multiplicative_expression)


State 31

   69 unary_expression: primary_expression .

    $default  reduce using rule 69 (unary_expression)


State 32

    6 function_definition: type_specifier IDENTIFIER LPAREN RPAREN . compound_statement

    LBRACE  shift, and go to state 50

    compound_statement  go to state 51


State 33

   10 init_declarator: IDENTIFIER .
   11                | IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 16

    $default  reduce using rule 10 (init_declarator)


State 34

    9 init_declarator_list: init_declarator_list COMMA init_declarator .

    $default  reduce using rule 9 (init_declarator_list)


State 35

   52 assignment_expression: IDENTIFIER ASSIGN . assignment_expression

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    assignment_expression      go to state 52
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 36

   71 primary_expression: IDENTIFIER .

    $default  reduce using rule 71 (primary_expression)


State 37

   70 unary_expression: MINUS unary_expression .

    $default  reduce using rule 70 (unary_expression)


State 38

   74 primary_expression: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 53


State 39

   55 relop: LT .

    $default  reduce using rule 55 (relop)


State 40

   56 relop: GT .

    $default  reduce using rule 56 (relop)


State 41

   57 relop: LE .

    $default  reduce using rule 57 (relop)


State 42

   58 relop: GE .

    $default  reduce using rule 58 (relop)


State 43

   59 relop: EQ .

    $default  reduce using rule 59 (relop)


State 44

   60 relop: NE .

    $default  reduce using rule 60 (relop)


State 45

   54 relational_expression: relational_expression relop . additive_expression

    IDENTIFIER       shift, and go to state 36
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    additive_expression        go to state 54
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 46

   64 additive_expression: additive_expression PLUS . multiplicative_expression

    IDENTIFIER       shift, and go to state 36
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    multiplicative_expression  go to state 55
    unary_expression           go to state 30
    primary_expression         go to state 31


State 47

   65 additive_expression: additive_expression MINUS . multiplicative_expression

    IDENTIFIER       shift, and go to state 36
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    multiplicative_expression  go to state 56
    unary_expression           go to state 30
    primary_expression         go to state 31


State 48

   67 multiplicative_expression: multiplicative_expression MUL . unary_expression

    IDENTIFIER       shift, and go to state 36
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    unary_expression    go to state 57
    primary_expression  go to state 31


State 49

   68 multiplicative_expression: multiplicative_expression DIV . unary_expression

    IDENTIFIER       shift, and go to state 36
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    unary_expression    go to state 58
    primary_expression  go to state 31


State 50

   16 compound_statement: LBRACE . statement_list RBRACE
   17                   | LBRACE . RBRACE

    error            shift, and go to state 59
    T_IF             shift, and go to state 60
    T_WHILE          shift, and go to state 61
    T_FOR            shift, and go to state 62
    T_RETURN         shift, and go to state 63
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24
    LBRACE           shift, and go to state 50
    RBRACE           shift, and go to state 64
    SEMICOLON        shift, and go to state 65
    INVALID_TOKEN    shift, and go to state 66

    compound_statement         go to state 67
    statement_list             go to state 68
    statement                  go to state 69
    expression_statement       go to state 70
    other_statement            go to state 71
    matched_statement          go to state 72
    unmatched_statement        go to state 73
    iteration_statement        go to state 74
    if_prefix                  go to state 75
    while_prefix               go to state 76
    for_prefix                 go to state 77
    jump_statement             go to state 78
    expression                 go to state 79
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 51

    6 function_definition: type_specifier IDENTIFIER LPAREN RPAREN compound_statement .

    $default  reduce using rule 6 (function_definition)


State 52

   52 assignment_expression: IDENTIFIER ASSIGN assignment_expression .

    $default  reduce using rule 52 (assignment_expression)


State 53

   74 primary_expression: LPAREN expression RPAREN .

    $default  reduce using rule 74 (primary_expression)


State 54

   54 relational_expression: relational_expression relop additive_expression .
   64 additive_expression: additive_expression . PLUS multiplicative_expression
   65                    | additive_expression . MINUS multiplicative_expression

    PLUS   shift, and go to state 46
    MINUS  shift, and go to state 47

    $default  reduce using rule 54 (relational_expression)


State 55

   64 additive_expression: additive_expression PLUS multiplicative_expression .
   67 multiplicative_expression: multiplicative_expression . MUL unary_expression
   68                          | multiplicative_expression . DIV unary_expression

    MUL  shift, and go to state 48
    DIV  shift, and go to state 49

    $default  reduce using rule 64 (additive_expression)


State 56

   65 additive_expression: additive_expression MINUS multiplicative_expression .
   67 multiplicative_expression: multiplicative_expression . MUL unary_expression
   68                          | multiplicative_expression . DIV unary_expression

    MUL  shift, and go to state 48
    DIV  shift, and go to state 49

    $default  reduce using rule 65 (additive_expression)


State 57

   67 multiplicative_expression: multiplicative_expression MUL unary_expression .

    $default  reduce using rule 67 (multiplicative_expression)


State 58

   68 multiplicative_expression: multiplicative_expression DIV unary_expression .

    $default  reduce using rule 68 (multiplicative_expression)


State 59

   28 other_statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 60

   38 if_prefix: T_IF . LPAREN expression RPAREN marker_if

    LPAREN  shift, and go to state 81


State 61

   40 while_prefix: T_WHILE . marker_while LPAREN $@3 expression RPAREN marker_if

    $default  reduce using rule 44 (marker_while)

    marker_while  go to state 82


State 62

   42 for_prefix: T_FOR . LPAREN opt_expression SEMICOLON marker_for $@4 opt_expression SEMICOLON marker_if capture_begin opt_expression capture_end RPAREN

    LPAREN  shift, and go to state 83


State 63

   48 jump_statement: T_RETURN . expression SEMICOLON
   49               | T_RETURN . SEMICOLON

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24
    SEMICOLON        shift, and go to state 84

    expression                 go to state 85
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 64

   17 compound_statement: LBRACE RBRACE .

    $default  reduce using rule 17 (compound_statement)


State 65

   23 expression_statement: SEMICOLON .

    $default  reduce using rule 23 (expression_statement)


State 66

   27 other_statement: INVALID_TOKEN .

    $default  reduce using rule 27 (other_statement)


State 67

   24 other_statement: compound_statement .

    $default  reduce using rule 24 (other_statement)


State 68

   16 compound_statement: LBRACE statement_list . RBRACE
   19 statement_list: statement_list . statement

    error            shift, and go to state 59
    T_IF             shift, and go to state 60
    T_WHILE          shift, and go to state 61
    T_FOR            shift, and go to state 62
    T_RETURN         shift, and go to state 63
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24
    LBRACE           shift, and go to state 50
    RBRACE           shift, and go to state 86
    SEMICOLON        shift, and go to state 65
    INVALID_TOKEN    shift, and go to state 66

    compound_statement         go to state 67
    statement                  go to state 87
    expression_statement       go to state 70
    other_statement            go to state 71
    matched_statement          go to state 72
    unmatched_statement        go to state 73
    iteration_statement        go to state 74
    if_prefix                  go to state 75
    while_prefix               go to state 76
    for_prefix                 go to state 77
    jump_statement             go to state 78
    expression                 go to state 79
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 69

   18 statement_list: statement .

    $default  reduce using rule 18 (statement_list)


State 70

   25 other_statement: expression_statement .

    $default  reduce using rule 25 (other_statement)


State 71

   29 matched_statement: other_statement .

    $default  reduce using rule 29 (matched_statement)


State 72

   20 statement: matched_statement .

    $default  reduce using rule 20 (statement)


State 73

   21 statement: unmatched_statement .

    $default  reduce using rule 21 (statement)


State 74

   30 matched_statement: iteration_statement .

    $default  reduce using rule 30 (matched_statement)


State 75

   32 matched_statement: if_prefix . matched_statement T_ELSE @1 matched_statement
   33 unmatched_statement: if_prefix . statement
   35                    | if_prefix . matched_statement T_ELSE @2 unmatched_statement

    error            shift, and go to state 59
    T_IF             shift, and go to state 60
    T_WHILE          shift, and go to state 61
    T_FOR            shift, and go to state 62
    T_RETURN         shift, and go to state 63
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24
    LBRACE           shift, and go to state 50
    SEMICOLON        shift, and go to state 65
    INVALID_TOKEN    shift, and go to state 66

    compound_statement         go to state 67
    statement                  go to state 88
    expression_statement       go to state 70
    other_statement            go to state 71
    matched_statement          go to state 89
    unmatched_statement        go to state 73
    iteration_statement        go to state 74
    if_prefix                  go to state 75
    while_prefix               go to state 76
    for_prefix                 go to state 77
    jump_statement             go to state 78
    expression                 go to state 79
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 76

   36 iteration_statement: while_prefix . matched_statement

    error            shift, and go to state 59
    T_IF             shift, and go to state 60
    T_WHILE          shift, and go to state 61
    T_FOR            shift, and go to state 62
    T_RETURN         shift, and go to state 63
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24
    LBRACE           shift, and go to state 50
    SEMICOLON        shift, and go to state 65
    INVALID_TOKEN    shift, and go to state 66

    compound_statement         go to state 67
    expression_statement       go to state 70
    other_statement            go to state 71
    matched_statement          go to state 90
    iteration_statement        go to state 74
    if_prefix                  go to state 91
    while_prefix               go to state 76
    for_prefix                 go to state 77
    jump_statement             go to state 78
    expression                 go to state 79
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 77

   37 iteration_statement: for_prefix . matched_statement

    error            shift, and go to state 59
    T_IF             shift, and go to state 60
    T_WHILE          shift, and go to state 61
    T_FOR            shift, and go to state 62
    T_RETURN         shift, and go to state 63
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24
    LBRACE           shift, and go to state 50
    SEMICOLON        shift, and go to state 65
    INVALID_TOKEN    shift, and go to state 66

    compound_statement         go to state 67
    expression_statement       go to state 70
    other_statement            go to state 71
    matched_statement          go to state 92
    iteration_statement        go to state 74
    if_prefix                  go to state 91
    while_prefix               go to state 76
    for_prefix                 go to state 77
    jump_statement             go to state 78
    expression                 go to state 79
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 78

   26 other_statement: jump_statement .

    $default  reduce using rule 26 (other_statement)


State 79

   22 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 93


State 80

   28 other_statement: error SEMICOLON .

    $default  reduce using rule 28 (other_statement)


State 81

   38 if_prefix: T_IF LPAREN . expression RPAREN marker_if

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    expression                 go to state 94
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 82

   40 while_prefix: T_WHILE marker_while . LPAREN $@3 expression RPAREN marker_if

    LPAREN  shift, and go to state 95


State 83

   42 for_prefix: T_FOR LPAREN . opt_expression SEMICOLON marker_for $@4 opt_expression SEMICOLON marker_if capture_begin opt_expression capture_end RPAREN

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    $default  reduce using rule 62 (opt_expression)

    expression                 go to state 96
    assignment_expression      go to state 26
    relational_expression      go to state 27
    opt_expression             go to state 97
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 84

   49 jump_statement: T_RETURN SEMICOLON .

    $default  reduce using rule 49 (jump_statement)


State 85

   48 jump_statement: T_RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 98


State 86

   16 compound_statement: LBRACE statement_list RBRACE .

    $default  reduce using rule 16 (compound_statement)


State 87

   19 statement_list: statement_list statement .

    $default  reduce using rule 19 (statement_list)


State 88

   33 unmatched_statement: if_prefix statement .

    $default  reduce using rule 33 (unmatched_statement)


State 89

   20 statement: matched_statement .
   32 matched_statement: if_prefix matched_statement . T_ELSE @1 matched_statement
   35 unmatched_statement: if_prefix matched_statement . T_ELSE @2 unmatched_statement

    T_ELSE  shift, and go to state 99

    $default  reduce using rule 20 (statement)


State 90

   36 iteration_statement: while_prefix matched_statement .

    $default  reduce using rule 36 (iteration_statement)


State 91

   32 matched_statement: if_prefix . matched_statement T_ELSE @1 matched_statement

    error            shift, and go to state 59
    T_IF             shift, and go to state 60
    T_WHILE          shift, and go to state 61
    T_FOR            shift, and go to state 62
    T_RETURN         shift, and go to state 63
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24
    LBRACE           shift, and go to state 50
    SEMICOLON        shift, and go to state 65
    INVALID_TOKEN    shift, and go to state 66

    compound_statement         go to state 67
    expression_statement       go to state 70
    other_statement            go to state 71
    matched_statement          go to state 100
    iteration_statement        go to state 74
    if_prefix                  go to state 91
    while_prefix               go to state 76
    for_prefix                 go to state 77
    jump_statement             go to state 78
    expression                 go to state 79
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 92

   37 iteration_statement: for_prefix matched_statement .

    $default  reduce using rule 37 (iteration_statement)


State 93

   22 expression_statement: expression SEMICOLON .

    $default  reduce using rule 22 (expression_statement)


State 94

   38 if_prefix: T_IF LPAREN expression . RPAREN marker_if

    RPAREN  shift, and go to state 101


State 95

   40 while_prefix: T_WHILE marker_while LPAREN . $@3 expression RPAREN marker_if

    $default  reduce using rule 39 ($@3)

    $@3  go to state 102


State 96

   61 opt_expression: expression .

    $default  reduce using rule 61 (opt_expression)


State 97

   42 for_prefix: T_FOR LPAREN opt_expression . SEMICOLON marker_for $@4 opt_expression SEMICOLON marker_if capture_begin opt_expression capture_end RPAREN

    SEMICOLON  shift, and go to state 103


State 98

   48 jump_statement: T_RETURN expression SEMICOLON .

    $default  reduce using rule 48 (jump_statement)


State 99

   32 matched_statement: if_prefix matched_statement T_ELSE . @1 matched_statement
   35 unmatched_statement: if_prefix matched_statement T_ELSE . @2 unmatched_statement

    T_IF      reduce using rule 31 (@1)
    T_IF      [reduce using rule 34 (@2)]
    $default  reduce using rule 31 (@1)

    @1  go to state 104
    @2  go to state 105


State 100

   32 matched_statement: if_prefix matched_statement . T_ELSE @1 matched_statement

    T_ELSE  shift, and go to state 106


State 101

   38 if_prefix: T_IF LPAREN expression RPAREN . marker_if

    $default  reduce using rule 43 (marker_if)

    marker_if  go to state 107


State 102

   40 while_prefix: T_WHILE marker_while LPAREN $@3 . expression RPAREN marker_if

    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 21
    FLOAT_LITERAL    shift, and go to state 22
    MINUS            shift, and go to state 23
    LPAREN           shift, and go to state 24

    expression                 go to state 108
    assignment_expression      go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31


State 103

   42 for_prefix: T_FOR LPAREN opt_expression SEMICOLON . marker_for $@4 opt_expression SEMICOLON marker_if capture_begin opt_expression capture_end RPAREN

    $default  reduce using rule 45 (marker_for)

    marker_for  go to state 109


State 104

   32 matched_statement: if_prefix matched_statement T_ELSE @1 . matched_statement
